played around with search form

--- a/views/layouts/landingPage.handlebars
+++ b/views/layouts/landingPage.handlebars
@@ -1,3 +1,17 @@
-<div>
-  
+<div class="container viewWorkouts-container">
+  <h1>Search Workouts</h1>
+  <div class="container border">
+    <form class="form-inline" method="GET" action="/workoutSearch">
+      <label class="my-1 mr-2" for="selection">Sort by:</label>
+      <select class="custom-select my-1 mr-sm-2" id="selection">
+        <option selected>Most Popular</option>
+        {{#each muscleGroup}}
+          <option value="{{muscleGroup}}">{{muscleGroup}}</option>
+        {{/each}}
+      </select>
+      <label class="my-1 mr-2" for="search">Search Workout:</label>
+      <input type="text" class="my-sm-3 my-1 mr-2" placeholder="Workout Name">
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </div>
 </div>
