--- a/views/layouts/navbar.handlebars
+++ b/views/layouts/navbar.handlebars
@@ -28,8 +28,11 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="/">Home</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link" href="/">Workouts</a>
+                        </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Todo</a>
+                            <a class="nav-link" href="/">Logged Workouts</a>
                         </li>
                     </ul>
 
