--- a/views/layouts/signin.handlebars
+++ b/views/layouts/signin.handlebars
@@ -1,15 +1,14 @@
-<div class="container signup-container text-center">
-  <h1>Sign Up</h1>
-  <form class="form-signup" method="POST" action="/signup">
+<div class="container signin-container text-center">
+  <h1>Sign In</h1>
+  <form class="form-signin" method="POST" action="/signin">
     <div class="form-group">
       <label for="exampleInputEmail" class="sr-only">Email address</label>
       <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Email address">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1" class="sr-only">Password</label>
       <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-lg btn-primary btn-block">Sign up</button>
+    <button type="submit" class="btn btn-lg btn-primary btn-block">Sign In</button>
   </form>
 </div>
