--- a/views/layouts/profile.handlebars
+++ b/views/layouts/profile.handlebars
@@ -93,8 +93,13 @@
   <div class="card">
     <div class="card-body">
       <h5>Created Workouts</h6>
-      <div class="row">
-        
+      {{!-- this is made for each workout card--}}
+      <div class="card">
+        <div class="card-body">
+          <div class="row">
+            <h4 class="card-title">My Chest-day Workout</h4>
+          </div>
+        </div>
       </div>
     </div>
   </div>
