added handlebar helpers and worked on profile page

--- a/public/css/hidden.css
+++ b/public/css/hidden.css
@@ -40,6 +40,10 @@ li.signup-btn  {
     margin: 0 auto;
 }
 
+.profile-card {
+    min-width: 228px;
+}
+
 .viewWorkouts-container {
     padding-top: 5rem;
 }
