--- a/views/layouts/profile.handlebars
+++ b/views/layouts/profile.handlebars
@@ -5,17 +5,17 @@
       <div class="card">
         <div class="card-body">
           <div class="d-flex flex-column align-items-center text-center">
-            <div class="mt-3">
-              <h4>Adam Anikiej</h4>
-              <p class="text-secondary">Bio: This is a test bio when we have a really long bio I want to see what happens to the card shape and stuff. This is still just a bio but a good test on what happenes with a very very very long bio.</p>
+            <div class="mt-3 profile-card">
+              <h4>{{user.userInfo.firstName}} {{user.userInfo.lastName}}</h4>
+              <p class="text-secondary">{{user.userInfo.bio}}</p>
               <div class="d-flex flex-row align-items-center text-center">
                 <div class="flex-fill">
                   <h6 class="mb-0">Likes:</h6>
-                  <span class="text-secondary">34</span>
+                  <span class="text-secondary">{{user.totalLikesReceived}}</span>
                 </div>
                 <div class="flex-fill">
                   <h6 class="mb-0">Comments:</h6>
-                  <span class="text-secondary">23</span>
+                  <span class="text-secondary">{{user.totalCommentsReceived}}</span>
                 </div>
               </div>
             </div>
@@ -31,7 +31,7 @@
               Full Name
             </div>
             <div class="col-sm-7 text-secondary">
-              Adam Anikiej
+              {{user.userInfo.firstName}} {{user.userInfo.lastName}}
             </div>
           </div>
           <hr>
@@ -40,7 +40,7 @@
               Email
             </div>
             <div class="col-sm-7 text-secondary">
-              aanikie1@stevens.edu
+              {{user.email}}
             </div>
           </div>
           <hr>
@@ -49,7 +49,7 @@
               Birthday
             </div>
             <div class="col-sm-7 text-secondary">
-              10/12/2001
+              {{dateFormat user.userInfo.birthDate "MM/DD/YYYY"}}
             </div>
           </div> 
           <hr>
@@ -58,7 +58,7 @@
               Weight
             </div>
             <div class="col-sm-7 text-secondary">
-              170lbs
+              {{check user.userInfo.weight 0 ' lbs'}}
             </div>
           </div>
           <hr>
@@ -67,7 +67,7 @@
               Height
             </div>
             <div class="col-sm-7 text-secondary">
-              6' 2"
+              {{heightFormat user.userInfo.height}}
             </div>
           </div>
           <hr>
@@ -76,7 +76,7 @@
               Frequency
             </div>
             <div class="col-sm-7 text-secondary">
-              3 times a week
+              {{check user.userInfo.frequencyOfWorkingOut 0 ' times a week'}}
             </div>
           </div>
           <hr>
@@ -92,7 +92,7 @@
   </div>
   <div class="card">
     <div class="card-body">
-      <h5>Created Workouts</h6>
+      <h5>Created Workouts</h5>
       {{!-- this is made for each workout card--}}
       <div class="card">
         <div class="card-body">
@@ -103,4 +103,58 @@
       </div>
     </div>
   </div>
+  <div class="card">
+    <div class="card-body">
+      <h5>Logged Workouts</h5>
+      {{!-- this is made for each workout log card --}}
+      {{#if workoutLogs.length}}
+        {{#each workoutLogs}}
+          <div class="card border-5 pb-0 px-3">
+            <div class="card-body">
+              <div class="row">
+                {{!-- figure out if we want to get the parentWorkout name here --}}
+                <div class="col-12">
+                  <h4 class="card-title">{{workout}}</h4>
+                </div>
+                <div class="col">
+                  <div class="card-subtitle mb-2 text-muted">
+                    Logged on  {{dateFormat logInfo.date "dddd, MMMM Do, YYYY"}}
+                  </div>
+                </div>
+              </div>
+              <div class="d-flex flex-row flex-wrap justify-content-between align-items-center text-center">
+                <div class="d-flex flex-row">
+                  <div class="d-flex flex-column mr-4">
+                    <h6 class="mb-0">Intensity:</h6>
+                    <span class="text-secondary">{{logInfo.intensity}}</span>
+                  </div>
+                  <div class="d-flex flex-column mr-4">
+                    <h6 class="mb-0">Length:</h6>
+                    <span class="text-secondary">{{logInfo.length}}</span>
+                  </div>
+                  <div class="d-flex flex-column mr-4">
+                    <h6 class="mb-0">Exercises:</h6>
+                    <span class="text-secondary">{{logInfo.exercises.length}}</span>
+                  </div>
+                </div>
+                
+                <div>
+                  <button class="btn btn-primary" href="/workoutLog/{{logInfo.workout}}">View</button>
+                  <button class="btn btn-outline-primary" href="/workoutLog/edit/{{logInfo.workout}}">Edit</button>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          {{#if @last}}
+          {{else}}
+            <hr>
+          {{/if}}
+        {{/each}}
+      {{else}}
+      {{!-- TODO: what to show when there are no workoutLogs --}}
+      {{/if}}
+    </div>
+  </div>
+  <script src="../../public/js/profile.js"></script>
 </div>
