--- a/public/css/hidden.css
+++ b/public/css/hidden.css
@@ -44,6 +44,7 @@ li.signup-btn  {
     min-width: 228px;
 }
 
-.viewWorkouts-container {
+.viewWorkouts-container,
+.logout-container {
     padding-top: 5rem;
 }
