--- a/views/layouts/navbar.handlebars
+++ b/views/layouts/navbar.handlebars
@@ -39,20 +39,25 @@
                     {{!-- right sided navbar items --}}
                     {{!-- need to make it change depending on if user is logged in --}}
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item signup-btn">
-                            <a class="btn btn-outline-success" href="/signup">Join</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="btn btn-outline-secondary" href="/signin">Sign In</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/profile">My Profile</a>
-                        </li>
+                        {{#if loggedIn}}
+                            <li class="nav-item">
+                                <a class="nav-link" href="/profile">My Profile</a>
+                            </li>
+                            <li class="nav-item signup-btn">
+                                <a class="btn btn-outline-success" href="/logout">Log out</a>
+                            </li>
+                        {{else}}
+                            <li class="nav-item signup-btn">
+                                <a class="btn btn-outline-success" href="/signup">Join</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-outline-secondary" href="/signin">Sign In</a>
+                            </li>
+                        {{/if}}
                     </ul>
                 </div>
             </nav>
         </header>
-
         <main>
             {{{body}}}
         </main>
