--- a/views/layouts/signin.handlebars
+++ b/views/layouts/signin.handlebars
@@ -2,13 +2,17 @@
   <h1>Sign In</h1>
   <form class="form-signin" method="POST" action="/signin">
     <div class="form-group">
-      <label for="exampleInputEmail" class="sr-only">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Email address">
+      <label for="inputEmail" class="sr-only">Email address</label>
+      <input name="inputEmail" type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Email address">
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1" class="sr-only">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input name="inputPassword" type="password" class="form-control" id="inputPassword" placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-lg btn-primary btn-block">Sign In</button>
+    <button type="submit" class="btn btn-lg btn-primary btn-block">Sign in</button>
   </form>
+    <div class="d-flex flex-column mt-3 align-items-center text-center form-signin">
+      <span class="mb-2">Don't have an account?</span>
+      <a class="btn btn-primary w-50" href="/signup">Sign up</a>
+    </div>
 </div>
