--- a/views/layouts/signup.handlebars
+++ b/views/layouts/signup.handlebars
@@ -2,14 +2,18 @@
   <h1>Sign Up</h1>
   <form class="form-signup" method="POST" action="/signup">
     <div class="form-group">
-      <label for="exampleInputEmail" class="sr-only">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Email address">
+      <label for="inputEmail" class="sr-only">Email address</label>
+      <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Email address">
       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1" class="sr-only">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input type="password" class="form-control" id="inputPassword" placeholder="Password">
     </div>
     <button type="submit" class="btn btn-lg btn-primary btn-block">Sign up</button>
   </form>
+    <div class="d-flex flex-column mt-3 align-items-center text-center form-signup">
+      <span class="mb-2">Already have an account?</span>
+      <a class="btn btn-primary w-50" href="/signin">Sign in</a>
+    </div>
 </div>
