--- a/public/css/hidden.css
+++ b/public/css/hidden.css
@@ -35,9 +35,13 @@ li.signup-btn  {
 .form-signup,
 .form-signin {
     width: 100%;
-    max-width: 330px;
+    max-width: 400px;
     padding: 15px;
     margin: 0 auto;
+}
+
+.birthDateInput {
+    min-width: 190px;
 }
 
 .profile-card {
