Implemented comments to workouts

--- a/views/workouts/createWorkout.handlebars
+++ b/views/workouts/createWorkout.handlebars
@@ -28,4 +28,4 @@
 {{else}}
     <p class="error,hidden" id="error"></p>
 {{/if}}
-<script src="/public/js/workouts/createWorkout.js"></script>
+<script type="module" src="/public/js/workouts/createWorkout.js"></script>
