--- a/public/css/hidden.css
+++ b/public/css/hidden.css
@@ -36,18 +36,25 @@ li.signup-btn  {
     padding-top: 6px;
 }
 
+.profile_edit-container,
 .signup-container,
 .signin-container,
 .profile-container {
     padding-top: 5rem;
 }
 
+.profile_edit-container {
+    padding-top: 2rem;
+}
+
+.form-profile_edit,
 .form-signup,
 .form-signin {
     width: 100%;
     max-width: 400px;
     padding: 15px;
     margin: 0 auto;
+    text-align: left;
 }
 
 .birthDateInput {
