--- a/views/layouts/profile.handlebars
+++ b/views/layouts/profile.handlebars
@@ -81,9 +81,18 @@
           </div>
           <hr>
           <div class="row">
+            <div class="col-sm-5">
+              Bio
+            </div>
+            <div class="col-sm-7 text-secondary">
+              {{check user.userInfo.bio "" ""}}
+            </div>
+          </div>
+          <hr>
+          <div class="row">
             <div class="col-sm-12">
               {{!-- need to make it where it just lets the fields be editable (ajax request) --}}
-              <a class="btn btn-info" href="/">Edit</a>
+              <a class="btn btn-info" href="/profile_edit/{{user.id}}">Edit Profile</a>
             </div>
           </div>
         </div>
@@ -140,7 +149,7 @@
                 
                 <div>
                   <button class="btn btn-primary" href="/workoutLog/{{logInfo.workout}}">View</button>
-                  <button class="btn btn-outline-primary" href="/workoutLog/edit/{{logInfo.workout}}">Edit</button>
+                  <button class="btn btn-outline-primary" href="/workoutLog/edit/{{logInfo.workout}}">Edit Workout Log</button>
                 </div>
               </div>
 
