--- a/views/layouts/signup.handlebars
+++ b/views/layouts/signup.handlebars
@@ -37,9 +37,9 @@
         </div>
         <div class="form-group col-md-6">
           <label for="inputLastName" class="sr-only">Last Name</label>
-          <input value="{{inputLastName}}" name="inputLastName" type="text" pattern="^[a-zA-Z]+(?:\s+[a-zA-Z]+)*$" class="form-control" id="inputLastName" placeholder="Last Name">
+          <input value="{{inputLastName}}" name="inputLastName" type="text" pattern="^[a-zA-Z]+(?:\s+[a-zA-Z]+)*$" class="form-control" id="inputLastName" placeholder="Last Name" required>
           <div class="invalid-feedback">
-            If provided, last name cannot be just spaces
+            Last name cannot be empty or just spaces
           </div>
         </div> 
       </div>
