changed error div name to avoid conflicts

--- a/views/layouts/landingPage.handlebars
+++ b/views/layouts/landingPage.handlebars
@@ -17,7 +17,7 @@
       {{/if}}
       </div>
     </form>
-    <div id="error"></div>
+    <div id="workout-search-error"></div>
     <div id="search-results" class="list-group"></div>
     <div class="pagination-pages" id="pagination"></div>
   </div>
