--- a/public/css/hidden.css
+++ b/public/css/hidden.css
@@ -79,3 +79,22 @@ li.signup-btn  {
     margin-left: auto; 
     margin-right: 0;
 }
+
+#exercise-display {
+    padding-top: 20px;
+    text-align: center;
+    margin: auto;
+}
+
+#exercise-value-label {
+    font-weight: bold;
+}
+
+#exercise-error {
+    max-width: 80%;
+    margin: auto;
+}
+
+#pill-badge {
+    padding: 12px;
+}
