added creating workoutlog, viewing workoutlog, deleting workoutlog, and fixed workoutlogs on profile page

--- a/public/css/hidden.css
+++ b/public/css/hidden.css
@@ -38,7 +38,8 @@ li.signup-btn  {
 
 .signup-container,
 .signin-container,
-.profile-container {
+.profile-container,
+.createWorkoutlog {
     padding-top: 5rem;
 }
 
