corrected some mistakes on creating workoutlog page and added more validation

--- a/views/layouts/viewWorkoutLog.handlebars
+++ b/views/layouts/viewWorkoutLog.handlebars
@@ -44,7 +44,7 @@
       <div class="form-group row">
         <div class="col-sm-4 col-form-label">Length (Minutes)</div>
         <div class="col-sm-8">
-          <div id="length" name="length">{{workoutLog.logInfo.length}}</div>
+          <div id="length" name="length">{{workoutLog.logInfo.length}} minutes</div>
         </div>
       </div>
       <div class="form-group row">
@@ -88,14 +88,14 @@
             <div class="form-group row">
               <div class="col-sm-4 col-form-label">Rest</div>
               <div class="col-sm-8">
-                <div id="exerciseRest" name="exerciseRest">{{rest}}</div>
+                <div id="exerciseRest" name="exerciseRest">{{rest}} sec.</div>
               </div>
             </div>
 
             <div class="form-group row">
               <div class="col-sm-4 col-form-label">Weight</div>
               <div class="col-sm-8">
-                <div id="exerciseWeight" name="exerciseWeight">{{weight}}</div>
+                <div id="exerciseWeight" name="exerciseWeight">{{weight}} lbs</div>
               </div>
             </div>
 
