--- a/views/layouts/createWorkoutLog.handlebars
+++ b/views/layouts/createWorkoutLog.handlebars
@@ -29,57 +29,50 @@
       <button id="deleteLogButton" class="btn btn-danger" data-toggle="modal" data-target="#confirmModal">Delete</button>
     </div>
   </div>
-  {{#if errors}}
-  {{#each errors}}
-  <div class="container text-center errorContainer">
-    <div class="alert alert-danger alert-dismissible row" role="alert">
-      <div>{{error}}</div>
-      <button type="button" class="close errorBtn" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-  </div>
-  {{/each}}
-  {{/if}}
+  <div id="errorPlaceholder"></div>
   <div class="card mb-2">
     <div class="card-body">
-      <form id="form-workoutlog" class="form-workoutlog" method="POST" action="/workout{{workoutId}}/log" novalidate>
+      <form id="form-workoutlog" class="form-workoutlog needs-validation" method="POST" action="/workout{{workoutId}}/log" novalidate>
         <div class="form-group row">
           <label for="inputIntensity" class="col-sm-4 col-form-label">Workout Intensity (0-5)</label>
           <div class="col-sm-8">
-            <input id="inputIntensity" name="inputIntensity" value="{{workout.intensity}}" type="number" class="form-control" id="inputIntensity" placeholder="Intensity" required>
+            <input id="inputIntensity" name="inputIntensity" value="{{workout.intensity}}" type="number" class="form-control" placeholder="Intensity" required>
+            <div class="invalid-feedback">
+              Workout intensity must be provided and between 0 and 5
+            </div>
           </div>
-          <div class="invalid-feedback">
-            Workout intensity must be provided
-          </div>
+
         </div>
         <div class="form-group row">
           <label for="inputLength" class="col-sm-4 col-form-label">Length (Minutes)</label>
           <div class="col-sm-8">
-            <input id="inputLength" name="inputLength" value="{{workout.length}}" type="number" class="form-control" id="inputLength" placeholder="Length (Minutes)" required>
+            <input id="inputLength" name="inputLength" value="{{workout.length}}" type="number" class="form-control" placeholder="Length (Minutes)" required>
+            <div class="invalid-feedback">
+              Workout length must be provided and between 0 and 240
+            </div>
           </div>
-          <div class="invalid-feedback">
-            Workout length must be provided
-          </div>
+
         </div>
         <div class="form-group row">
           <label for="inputDate" class="col-sm-4 col-form-label">Date of workout</label>
           <div class="col-sm-8">
-            <input id="inputDate" name="inputLength" type="datetime-local" class="form-control" id="inputDate" required>
+            <input id="inputDate" name="inputDate" type="datetime-local" class="form-control" required>
+            <div class="invalid-feedback">
+              Workout date must be provided
+            </div>
           </div>
-          <div class="invalid-feedback">
-            Workout date must be provided
-          </div>
+
         </div>
 
         <div class="form-group row">
           <label for="inputComment" class="col-sm-4 col-form-label">Comment</label>
           <div class="col-sm-8">
-            <textarea id="inputComment" name="inputComment" type="date" placeholder="Workout comment" class="form-control" id="inputComment"></textarea>
+            <textarea id="inputComment" name="inputComment" type="date" placeholder="Workout comment" class="form-control"></textarea>
+            <div class="invalid-feedback">
+              If provided, workout comment cannot be empty or just spaces
+            </div>
           </div>
-          <div class="invalid-feedback">
-            If provided, workout comment cannot be empty
-          </div>
+
         </div>
 
       </form>
@@ -99,41 +92,47 @@
               <button id="removeExerciseButton" class="btn btn-outline-danger">Remove Exercise</button>
             </div>
 
-            <form id="form-workoutlog-exerice" class="form-workoutlog-exerice" novalidate>
+            <form id="form-workoutlog-exerice" class="form-workoutlog-exerice needs-validation" novalidate>
               <div class="form-group row">
                 <label for="inputExerciseSet" class="col-sm-4 col-form-label">Sets</label>
                 <div class="col-sm-8">
                   <input id="inputExerciseSet" data-exerciseid="{{exerciseId}}" name="inputExerciseSet" value="{{sets}}" type="number" class="form-control" id="inputExerciseSet" placeholder="Sets" required>
+                  <div class="invalid-feedback">
+                    Exercise set count must be provided and between 1 and 500
+                  </div>
                 </div>
-                <div class="invalid-feedback">
-                  Exercise set count must be provided
-                </div>
+
               </div>
 
               <div class="form-group row">
                 <label for="inputExerciseReps" class="col-sm-4 col-form-label">Reps</label>
                 <div class="col-sm-8">
                   <input id="inputExerciseReps" name="inputExerciseReps" value="{{repetitions}}" type="number" class="form-control" id="inputExerciseReps" placeholder="Repetitions" required>
+                  <div class="invalid-feedback">
+                    Exercise repetition count must be provided and between 1 and 500
+                  </div>
                 </div>
-                <div class="invalid-feedback">
-                  Exercise repetition count must be provided
-                </div>
+
               </div>
 
               <div class="form-group row">
                 <label for="inputExerciseRest" class="col-sm-4 col-form-label">Rest</label>
                 <div class="col-sm-8">
                   <input id="inputExerciseRest" name="inputExerciseRest" value="{{rest}}" type="number" class="form-control" id="inputExerciseRest" placeholder="Rest" required>
+                  <div class="invalid-feedback">
+                    Exercise rest must be provided and between 0 and 500
+                  </div>  
                 </div>
-                <div class="invalid-feedback">
-                  Exercise rest must be provided
-                </div>
+
               </div>
 
               <div class="form-group row">
                 <label for="inputExerciseWeight" class="col-sm-4 col-form-label">Weight</label>
                 <div class="col-sm-8">
                   <input id="inputExerciseWeight" name="inputExerciseWeight" value="{{weight}}" type="number" class="form-control" id="inputExerciseWeight" placeholder="Weight">
+                  <div class="invalid-feedback">
+                    If provided, weight must be between 0 and 500
+                  </div>
                 </div>
               </div>
 
@@ -141,6 +140,9 @@
                 <label for="inputExerciseNote" class="col-sm-4 col-form-label">Note</label>
                 <div class="col-sm-8">
                   <input id="inputExerciseNote" name="inputExerciseNote" value="{{note}}" type="text" class="form-control" id="inputExerciseNote" placeholder="Note">
+                  <div class="invalid-feedback">
+                    If provided, note cannot be empty or just spaces
+                  </div>
                 </div>
               </div>
 
