added edit workoutlog page

--- a/views/layouts/viewWorkoutLog.handlebars
+++ b/views/layouts/viewWorkoutLog.handlebars
@@ -28,6 +28,7 @@
       <a id="viewButton" class="btn btn-primary mr-1" href="/workout/{{workoutLog.workout}}">View Workout</a>
       {{!-- TODO --}}
       <button id="editButton" class="btn btn-outline-primary mr-1">Edit Log</button>
+      <button id="copyButton" class="btn btn-outline-primary mr-1">Copy Log</button>
       {{!-- TODO --}}
       <button id="deleteLogButton" class="btn btn-danger" data-toggle="modal" data-target="#confirmModal">Delete Log</button>
     </div>
