--- a/views/layouts/editWorkoutLog.handlebars
+++ b/views/layouts/editWorkoutLog.handlebars
@@ -11,11 +11,11 @@
           </button>
         </div>
         <div class="modal-body">
-          Are you sure you want to delete this workout log?
+          Are you sure you want to cancel editing this workout log?
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <a class="btn btn-danger" href="/workout/{{workoutId}}">Delete</a>
+          <a class="btn btn-danger" href="/workout/{{workoutId}}">Confirm</a>
         </div>
       </div>
     </div>
@@ -23,16 +23,16 @@
 
   {{!-- rest of page --}}
   <div class="d-flex row">
-    <h1 class="mr-auto">Log a Workout for "{{workout.name}}"</h1>
+    <h1 class="mr-auto">Editing workout log for "{{workout.name}}"</h1>
     <div class="ml-auto mt-2">
-      <button id="logButton" class="btn btn-primary mr-1">Log</button>
-      <button id="deleteLogButton" class="btn btn-danger" data-toggle="modal" data-target="#confirmModal">Delete</button>
+      <button id="logButton" class="btn btn-primary mr-1">Save changes</button>
+      <button id="deleteLogButton" class="btn btn-danger" data-toggle="modal" data-target="#confirmModal">Cancel changes</button>
     </div>
   </div>
   <div id="errorPlaceholder"></div>
   <div class="card mb-2">
     <div class="card-body">
-      <form id="form-workoutlog" class="form-workoutlog needs-validation" method="POST" action="/workout{{workoutId}}/log" novalidate>
+      <form id="form-workoutlog" class="form-workoutlog needs-validation" novalidate>
         <div class="form-group row">
           <label for="inputIntensity" class="col-sm-4 col-form-label">Workout Intensity (0-5)</label>
           <div class="col-sm-8">
@@ -56,7 +56,7 @@
         <div class="form-group row">
           <label for="inputDate" class="col-sm-4 col-form-label">Date of workout</label>
           <div class="col-sm-8">
-            <input id="inputDate" name="inputDate" type="datetime-local" class="form-control" required>
+            <input id="inputDate" name="inputDate" value="{{workout.date}}" type="datetime-local" class="form-control" required>
             <div class="invalid-feedback">
               Workout date must be provided
             </div>
@@ -67,7 +67,7 @@
         <div class="form-group row">
           <label for="inputComment" class="col-sm-4 col-form-label">Comment</label>
           <div class="col-sm-8">
-            <textarea id="inputComment" name="inputComment" placeholder="Workout comment" class="form-control"></textarea>
+            <textarea id="inputComment" name="inputComment" placeholder="Workout comment" class="form-control">{{workout.comment}}</textarea>
             <div class="invalid-feedback">
               If provided, workout comment cannot be empty or just spaces
             </div>
@@ -164,9 +164,5 @@
         <div id="exerciseList-container"></div>
       </div>
     </div>
-    {{#if copy}}
-    <script src="../../../public/js/createworkoutlog.js"></script>
-    {{else}}
-    <script src="../../public/js/createworkoutlog.js"></script>
-    {{/if}}
+  <script src="../../../public/js/editWorkoutLog.js"></script>
 </div>
